2005-10-24  Kenichi Handa  <handa@m17n.org>

	* international/utf-7.el (utf-7): Add autoload cookie.

	* term/x-win.el: Register more Cyrillic characters in x-keysym-table.

2005-10-24  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (autoloads): Use "." instead of $(lisp) in the
	list of directories passed to batch-update-autoloads.  Add "." to
	the list of the echoed directories.

	* pgg-def.el:
	* pgg-gpg.el:
	* pgg-parse.el:
	* pgg-pgp.el:
	* pgg-pgp5.el:
	* pgg.el: Moved here from the gnus subdirectory.

2005-10-24  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-filter): Bind inhibit-read-only to t
	in case comint-prompt-read-only is set to t.

	* progmodes/gdb-ui.el (gdb-send): Bind inhibit-read-only to t
	in case comint-prompt-read-only is set to t.

2005-10-24  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar-version): Increase to 0.13. Now
	a string.
	(icalendar-import-format): Handle CLASS, STATUS, URL. Rename
	`subject' to `summary'.
	(icalendar-import-format-summary): Rename from
	`icalendar-import-format-subject'.
	(icalendar-import-format-url, icalendar-import-format-status)
	(icalendar-import-format-class): New variables.
	(icalendar--rris): Take variable argument list.
	(icalendar--datestring-to-isodate): Remove unnecessary
	calendar-style check when converting dates with explicit month
	names.
	(icalendar-export-region): Change return type of conversion
	subroutines.  Bury current buffer unless error occurred.
	(icalendar--convert-to-ical)
	(icalendar--parse-summary-and-rest): New functions.
	(icalendar--convert-ordinary-to-ical)
	(icalendar--convert-weekly-to-ical)
	(icalendar--convert-yearly-to-ical)
	(icalendar--convert-block-to-ical)
	(icalendar--convert-cyclic-to-ical)
	(icalendar--convert-anniversary-to-ical): Change return type.
	Strip trailing blanks from subject.
	(icalendar--convert-sexp-to-ical): Change return type.
	Strip trailing blanks from subject.  Handle simple sexp